--- a/GeneralAutoAlgPaper/ApproxUnivariate.tex
+++ b/GeneralAutoAlgPaper/ApproxUnivariate.tex
@@ -1,139 +1,179 @@
-Yuhan Ding needs to fix this section as soon as she can.
 
 Let $\ch$ be the space of continuous functions on $[0,1]$ with $\cl_{\infty}$ first derivatives.  Suppose one wants to approximate functions in $\ch$ based on function values.  The goal is to make the $\cl_{\infty}$ error small, i.e., to find an algorithm, $A$ for which $\norm[\infty]{f - A(f)} \le \varepsilon$.  A non-adaptive algorithm is described and analyzed first, however, as described in the introduction it is successful only for functions whose size is known.  Next an adaptive algorithm is constructed from the non-adaptive one.  A measure of guile is defined, and functions with moderate guile are guaranteed to be well-approximated by the non-adpative algorithm.
 
-\subsection{Non-Adaptive Algorithms} As a start, consider the algorithm that produces a piecwise constant approximation using function values at $n+1$ equally spaced data sites, $\left\{x_i = \frac{i}{n}\right\}_{i=0}^n$:
-\begin{equation} \label{appxbuildblock}
-\tA_n(f) = 1_{\left[0,\frac{1}{2n}\right)}(x) \, f(0) + \sum_{i=1}^{n-1} 1_{\left[\frac{2i-1}{2n},\frac{2i+1}{2n}\right)}(x) \, f\left(x_i\right) + 1_{\left[\frac{2n-1}{2n},1\right]}(x) \, f(1).
-\end{equation}
-This algorithm assigns as the value $\tA_n(f)(x)$ the value of $f\left(x_i\right)$ corresponding to the data site, $x_i$, nearest $x$.  The algorithm $\tA_n$ is used to construct an adaptive algorithm to be described later.  Note that the cost of this algorithm is $n+1$, not $n$.  Although this algorithm is slightly sub-optimal for fixed sample size, 
 
-Define the size of a function as the $\cl_{\infty}$ norm of its first derivative, i.e., $\size(f) = \norm[\infty]{f'}$. Furthermore, as in the previous section, define the ball of functions $\cb_{\sigma} :=\{f \in \ch : \norm[\infty]{f'} \le \sigma\}$.
+Here we consider the function in following sets.
 
-\begin{theorem} \label{stdappxthm}  The problem of approximating functions of bounded size has complexity
-\[
-\comp(\varepsilon,\cb_{\sigma},\Lambda^{\std}) = \left \lceil \frac{\sigma}{2\varepsilon} \right \rceil.
-\]
-The algorithm defined in \eqref{appxbuildblock} is nearly optimal, in the sense that it satisfies the error tolerance with only one additional function evaluation than is optimal:
-\[
-\sup_{f \in \cb_{\sigma}} \norm[\infty]{f - \tA_{\lceil\sigma/(2\varepsilon)\rceil}(f)} \le \varepsilon, \qquad \cost(\tA_{\lceil\sigma/(2\varepsilon)\rceil},\cb_{\sigma}) = \left \lceil \frac{\sigma}{2\varepsilon} \right \rceil + 1.
-\]
-\end{theorem}
-\begin{proof}  For any function $f$ lying in the ball $\cb_\sigma$, and any $x \in [0,1)$, let $x_i$ be the data site nearest $x$, and so $\abs{x-x_i} \le 1/(2\lceil\sigma/(2\varepsilon)\rceil) \le \varepsilon/\sigma$ and $\tA_{\lceil\sigma/(2\varepsilon)\rceil}(f)(x)=f(x_i)$. It then follows that
-\begin{equation*}
-\abs{f(x) - \tA_{\lceil\sigma/(2\varepsilon)\rceil}(f)(x)}=\abs{f(x) - f(x_i)} = \abs{\int_{x_i}^x f'(t) \, \dif t} \le \norm[\infty]{f'} \abs{x-x_i} \le  \sigma \frac{\varepsilon}{\sigma} = \varepsilon.
-\end{equation*}
-This implies that $\tA_{\lceil\sigma/(2\varepsilon)\rceil}$ that attains the error tolerance with  $\left \lceil \frac{\sigma}{2\varepsilon} \right \rceil + 1$ function evaluations.  A similar argument using an algorithm based on function evaluations at $x_i=(2i-1)/n,\ i=1, \ldots, n$ can be used to show that $\comp(\varepsilon,\cb_{\sigma},\Lambda^{\std}) \le \left \lceil \frac{\sigma}{2\varepsilon} \right \rceil$.
+Given $s\in (0,1], \tau \ge 0.$ Let
+$$\mathcal{N}_{s, \tau}=\left\{f \in C^{1}[0,1]: \forall x,t \in [0,1], |f^{'}(x)-f^{'}(t)|\leq \tau|x-t|^{s} \|f^{'}\|_{\infty} \right\}.$$
 
-To prove a lower bound, one considers \emph{any} (possibly adaptive) algorithm $A$ using $n\le \left \lceil \frac{\sigma}{2\varepsilon} \right \rceil - 1$ function evaluations.  The proof proceeds by constructing a fooling function, $f^* \in \cb_\sigma$ for which $\norm[\infty]{f^* - A(f^*)} > \varepsilon$.  Let $A$ be any such algorithm.  Since the algorithm may be adaptive, the choice of the point, $\xi_i$, where the fooling function, $f^*$, is evaluated, may depend on $(x_1,f^*(\xi_1)), \ldots, (\xi_{i-1},f^*(\xi_{i-1}))$, for $i=2, \ldots, n$. By fiat, the fooling function is constructed to vanish at all data sites, $\xi_i$.  The fooling function is a translated and scaled bump.  Define a standard triangular bump on $\reals$ as 
-\begin{equation} \label{trianglebump}
-\psi(x) : = \max(1-\abs{x},0) = \begin{cases}0, & \abs{x} > 1, \\
-1-\abs{x}, & \abs{x} \le 1,
-\end{cases}
-\end{equation}
-and note that $\norm[\infty]{\psi} = \norm[\infty]{\psi'}=1$.  Given the algorithm $A$ with data sites $\xi_1, \ldots, \xi_n$, there exists at least one point $\xi_0 \in [0,1)$ with $\min_{1 \le i \le n} \abs{\xi_i -\xi_0} \ge 1/(2n)$.  Then define the fooling function by 
-\[
-f^*: x \mapsto \frac{\sigma}{2n}\psi(2n(x-\xi_0)).
-\]
-By definition, $\pm f^*(\xi_i)=0$ for $i=1, \ldots, n$, and $\norm[\infty]{\pm{f^*}'} = \sigma$, so $\pm f^* \in \cb_\sigma$.   Moreover, $\pm f^*(\xi_i)= \pm \sigma/(2n)$.  Since the two functions $\pm f^*$ provide the same data to algorithm $A$, it follows that $A(f)(\xi_0)=A(-f)(\xi_0)$.  The triangle inequality and the strict upper bound on $n$ then imply that the approximation error must be greater than the desired tolerance.
+Given $n \in \mathbb{N}, n \ge 2$ and $f \in \mathcal{N}_{s,\tau},$ and given the data
+$f\left(\frac{i-1}{n}\right), i=1, \ldots,n+1.$
+
+Define $\tilde{f_{n}}(x)$ piecewise by
+$$\tilde{f_{n}}(x)=f\left(\frac{i-1}{n}\right)(i-nx)+f\left(\frac{i}{n}\right)(nx-i+1),$$
+
+for $i-1 \leq nx \leq i,$ $ i=1,\ldots,n.$
+
+Here we denote
+$$f[x,y]:=\frac{f(x)-f(y)}{x-y}.$$
+Then we can have another way to have $\tilde{f_{n}}(x)$
+$$\tilde{f_{n}}(x)=f\left(\frac{i-1}{n}\right)+f\left[\frac{i-1}{n},\frac{i}{n}\right]\left(x-\frac{i-1}{n}\right),$$
+ $$\tilde{f_{n}}(x)=f\left(\frac{i}{n}\right)+f\left[\frac{i-1}{n},\frac{i}{n}\right]\left(x-\frac{i}{n}\right),$$
+ for $\frac{i-1}{n} \leq x \leq \frac{i}{n}, \ i=1, \ldots, n.$
+
+ Note that for all $x,y \in [0,1]$ distinct, we have
+ $$|f(x)-f(y)|=\left|\int_{x}^{y}f^{'}(t)dt\right|\leq \left|\int_{x}^{y}\left|f^{'}(t)\right|dt\right|
+ \leq |x-y|\|f^{'}\|_{\infty}.$$
+ Therefore we have $|f[x,y]|\leq \|f^{'}\|_{\infty}.$
+
+ And we can also have
+ $$f(x)=f\left(\frac{i-1}{n}\right)+f\left[\frac{i-1}{n},x\right]\left(x-\frac{i-1}{n}\right),$$
+  $$\text{ or } f(x)=f\left(\frac{i}{n}\right)+f\left[\frac{i}{n},x\right]\left(x-\frac{i-1}{n}\right)  \forall i=1,\ldots,n, \forall x \in [0,1].$$
+
+  Then for all $x$ which $\frac{i-1}{n} \leq x \leq \frac{i}{n}$
+  \begin{align*}
+  f(x) & \leq \min\left(f\left(\frac{i-1}{n}\right)+\|f^{'}\|_{\infty}\left(x-\frac{i-1}{n}\right),f\left(\frac{i}{n}\right)-\|f^{'}\|_{\infty}\left(x-\frac{i}{n}\right)\right)\\
+  & \leq \left\{\begin{matrix}
+  f\left(\frac{i-1}{n}\right)+\|f^{'}\|_{\infty}\left(x-\frac{i-1}{n}\right) & \frac{i-1}{n} \leq x \leq \frac{i-1+j^{*}}{n} \\
+  f\left(\frac{i}{n}\right)-\|f^{'}\|_{\infty}\left(x-\frac{i}{n}\right) & \frac{i-1+j^{*}}{n} \leq x \leq \frac{i}{n}
+  \end{matrix},\right.
+  \end{align*}
+where $0 \leq j^{*} \leq 1$ is defined by
+$$f\left(\frac{i-1}{n}\right)+\|f^{'}\|_{\infty}\frac{j^{*}}{n}=f\left(\frac{i}{n}\right)-\|f^{'}\|_{\infty}\left(-1+j^{*}\right)
+\Rightarrow j^{*}=\frac{1}{2}\left[1+\frac{f\left[\frac{i-1}{n},\frac{i}{n}\right]}{\|f^{'}\|_{\infty}}\right].$$
+Then we have
 \begin{align*}
-\sup_{f \in \cb} \norm[\infty]{f - A(f)} 
-&\ge \max\left(\norm[\infty]{f^* - A(f^*)},\norm[\infty]{-f^* - A(- f^*)}\right) \\ 
-& \ge \max\left(\abs{f^*(\xi_0) - A(f)(\xi_0)},\abs{-f^*(\xi_0) - A(-f^*)(\xi_0)}\right) \\
-& \ge \frac{1}{2} \left [ \abs{f(\xi_0) - A(f^*)(\xi_0)} + \abs{f^*(\xi_0)+ A(-f^*)(\xi_0)} \right ]\\
-& \ge \frac{1}{2} \abs{f^*(\xi_0) - A(f^*)(\xi_0) + f^*(\xi_0) + A(-f^*)(\xi_0)}\\
-& = \abs{f^*(\xi_0)} = \frac{\sigma}{2n} \ge \frac{\sigma}{2 \left(\left \lceil \frac{\sigma}{2\varepsilon} \right \rceil - 1\right)} > \varepsilon. 
+f\left(\frac{i-1+j^{*}}{n}\right)-\tilde{f_{n}}\left(\frac{i-1+j^{*}}{n}\right) &
+\leq \left(\|f^{'}\|_{\infty}-f\left[\frac{i-1}{n},\frac{i}{n}\right]\right)\frac{j^{*}}{n}\\
+& =\left(\|f^{'}\|_{\infty}-f\left[\frac{i-1}{n},\frac{i}{n}\right]\right)\frac{1}{2n}\left[1+\frac{f\left[\frac{i-1}{n},\frac{i}{n}\right]}{\|f^{'}\|_{\infty}}\right]\\
+& =\frac{\|f^{'}\|_{\infty}}{2n}\left[1-\left(\frac{f\left[\frac{i-1}{n},\frac{i}{n}\right]}{\|f^{'}\|_{\infty}}\right)^{2}\right]\leq \frac{\|f^{'}\|_{\infty}}{2n}
 \end{align*}
-Thus, $\comp(\varepsilon,\cb_{\sigma},\Lambda^{\std}) > \left \lceil \frac{\sigma}{2\varepsilon} \right \rceil -1$, which completes the proof.
-\end{proof}
 
-\subsection{Adaptive Algorithms}
+Similarly, we can obtain that for $x \in [0,1]$
+\begin{equation}|f(x)-\tilde{f_{n}}(x)| \leq \frac{\|f^{'}\|_{\infty}}{2n}.
+\end{equation}
 
-The complexity result in Theorem \ref{stdappxthm} requires knowledg of the size of the function to be approximated, i.e, $\size(f) = \norm[\infty]{f'}$.  This is typically not known in advance, however, it can be approximated from the data. Given the data sites $0, 1/n, \dots, 1$, and the corresponding function values, one may estimate $\size(f)$ in terms of divided differences:
+Now looking another way for $\frac{i-1}{n} \leq x \leq \frac{i-\frac{1}{2}}{n}$
+$$\left|f(x)-\tilde{f_{n}}(x)\right|=\left|f\left[\frac{i-1}{n},x\right]\left(x-\frac{i-1}{n}\right)-f\left[\frac{i-1}{n},\frac{i}{n}\right]\right|\left(x-\frac{i-1}{n}\right).$$
+Then by Mean Value theorem, we can find $\xi \in \left(\frac{i-1}{n},x\right), \ \zeta \in \left(\frac{i-1}{n},\frac{i}{n}\right),$ such that
+$$f^{'}(\xi)=f\left[\frac{i-1}{n},x\right],f^{'}(\zeta)=f\left[\frac{i-1}{n},\frac{i}{n}\right].$$
+Let $x=\frac{i-1+j}{n}, \ 0 \leq j \leq \frac{1}{2}.$ Then we can have
+\begin{align*}
+\left|f(x)-\tilde{f_{n}}(x)\right|&=\frac{j}{n}|f^{'}(\xi)-f^{'}(\zeta)| \leq \frac{j}{n} \tau |\xi-\zeta|^{s}\|f^{'}\|_{\infty} \\
+ & \leq \frac{1}{2n} \tau \frac{1}{n^{s}}\|f^{'}\|_{\infty}=\frac{\tau}{2n^{s+1}}\|f^{'}\|_{\infty}.
+\end{align*}
+
+Similarly, for $\frac{i-\frac{1}{2}}{n} \leq x \leq \frac{i}{n},$ we can have same results.
+Hence, we obtain that
+$$\left|f(x)-\tilde{f_{n}}(x)\right|\leq\frac{\tau}{2n^{s+1}}\|f^{'}\|_{\infty}.$$
+Combine with eq.(1), we have
+\begin{equation}\left|f(x)-\tilde{f_{n}}(x)\right|\leq\min\left\{1, \frac{\tau}{n^{s}}\right\}\frac{\|f^{'}\|_{\infty}}{2n}.\end{equation}
+
+ Given the data sites $0, 1/n, \dots, 1$, and the corresponding function values, one may estimate $\size(f)$ in terms of divided differences:
 \begin{equation}
 \hsigma_n(f)= \max_{i=1, \ldots, n} n\abs{f(i/n)-f((i-1)/n)}.
 \end{equation}
-Note that $\hsigma_n(f)$ never overestimates $\size(f)$.  The quality of this estimate depends on how much $f'$ changes over a short distance.  This motivates the following definition of guile:
-\begin{equation}
-\guile(f):= \frac{\norm[\infty]{f''}}{\norm[\infty]{f'}} = \frac{\norm[\infty]{f''}}{\size(f)},
-\end{equation}
-with the convention that constant functions have zero guile.  The guile of a function is the size of its second derivative relative to the size of its first derivative.  This guile remains unchanged when the function is multiplied by any nonzero constant.
-
-A function with small guile has a size that is well approximated by $\hsigma_n$.  Suppose that $\zeta$ is some point satisfying $\abs{f'(\zeta)} = \norm[\infty]{f'}$ and that $(i-1)/n \le \zeta < i/n$.  It then follows that $f(i/n)-f((i-1)/n) = f'(\eta)/n$ for some $\eta$ between $(i-1)/n$ and $i/n$.  Thus,
+Note that $\hsigma_n(f)$ never overestimates $\size(f)$. Suppose that $\zeta$ is some point satisfying $\abs{f'(s)} = \norm[\infty]{f'}$ and that $(i-1)/n \le s < i/n$.  It then follows that $f(i/n)-f((i-1)/n) = f'(\eta)/n$ for some $\eta$ between $(i-1)/n$ and $i/n$.  Thus,
 \begin{align*}
-\norm[\infty]{f'} &= \abs{f'(\zeta)} = \abs{f'(\eta) + \int_{\eta}^{\zeta} f''(x) \, \dif x} \le \abs{f'(\eta)} + \abs{\int_{\eta}^{\zeta} f''(x) \, \dif x} \\
-& \le \hsigma_n(f) + \abs{\zeta - \eta} \norm[\infty]{f''} \le \hsigma_n(f) + \frac{\guile(f) \norm[\infty]{f'}}{n}, \\
-\norm[\infty]{f'} & \le \frac{\hsigma_n(f)}{1 - \guile(f)/n}.
+\norm[\infty]{f'} &= \abs{f'(s)}\leq \abs{f'(\eta)} + \abs{f'(\eta)-f'(s) }  \le \hsigma_n(f) + \tau\abs{ \eta-s}^{s} \norm[\infty]{f''}\nonumber\\
+& \leq  \hsigma_n(f) + \tau/n^{s} \norm[\infty]{f''}\nonumber\\
+&\Rightarrow \norm[\infty]{f'}  \le \frac{\hsigma_n(f)}{1 - \tau/n^{s}}.
 \end{align*}
-Letting $\cn_{\tau} = \{ f \in \ch : \guile(f) \le \tau\}$ now carves out a subset of $\ch$ which includes functions of arbitrarily size, but for which that size can be easily bounded empirically as
-\begin{equation} \label{sizebd}
-\size(f) \le \frac{\hsigma_n(f)}{1 - \tau/n} \qquad \forall f \in \cn_{\tau}.
-\end{equation}
-This then suggests the following adaptive algorithm that is guaranteed to approximate functions in $\cn_{\tau}$ within a tolerance of $\varepsilon$.
 
+Choose $n_{0}$ to find $\hat{\sigma}_{n_{0}}(f),$ such that
+$$\norm[\infty]{f'}\le \frac{\hsigma_{n_{0}}(f)}{1 - \tau/n_{0}^{s}}.$$
+Substitute above into eq.(2), we can obtain
+$$\left|f(x)-\tilde{f_{n}}(x)\right|\leq\min\left\{1, \frac{\tau}{n^{s}}\right\}\frac{1}{2n} \frac{\hsigma_{n_{0}}(f)}{1 - \tau/n_{0}^{s}}.
+$$
 
-\begin{algo} \label{adapappxalgo} Given positive numbers $\varepsilon$ and $\tau$, let $n_1=\lceil \tau \rceil +1$, and $j=1$. 
+This then suggests the following adaptive algorithm that is guaranteed to approximate functions in $\cn_{s,\tau}$ within a tolerance of $\varepsilon$.
+
+\begin{algo} \label{adapappxalgo} Given positive numbers $\varepsilon$ and $\tau$, let $j=1$ and $n_0=\lceil \frac{\tau C}{C-1} \rceil $, where $c>1.$ Evaluate $\hsigma_{n_{0}}(f)$
 \begin{enumerate}
-\renewcommand{\labelenumi}{Step \arabic{enumi}.} 
-\item Let $n=n_12^{j-1}$.  Evaluate $\hsigma_{n}(f)$.
-\item If 
+\renewcommand{\labelenumi}{Step \arabic{enumi}.}
+\item Let $n=n_02^{j-1}$.
+\item If
 \[
-\frac{\hsigma_n(f)}{2(n - \tau)} \le 
-\varepsilon,
+\min\left\{ \frac{\hsigma_{n_{0}}(f)}{2n(1 - \tau/n_{0}^{s})} , \frac{\tau\hsigma_{n_{0}}(f)}{2n^{1+s}(1 - \tau/n_{0}^{s})} \right\}< \varepsilon
 \]
 then output $A_{\varepsilon}(f) = \tA_{n}(f)$ as the approximation.  Else, let $j=j+1$ and to to Step 1.
 \end{enumerate}
 \end{algo}
 
 \begin{theorem} \label{adapappxthm}  \emph{Nice} functions may be well approximated at a reasonable cost by $A_{\varepsilon}$, the adaptive Algorithm \ref{adapappxalgo}.  In particular,
-\begin{gather*}
-\sup_{f \in \cn_{\tau}} \norm[\infty]{f - A_{\varepsilon}(f)} \le \varepsilon, \\
-\left \lceil \frac{\sigma}{2\varepsilon} \right \rceil \le \comp(\varepsilon,\cn_{\tau},\sigma) \le \cost(A_{\varepsilon},\cn_{\tau},\sigma) \le 2 \lceil \tau \rceil + \max\left(2,\frac{\sigma}{\varepsilon} \right) + 1.
-\end{gather*}
+\begin{align*}
+\sup_{f \in \cn_{\tau}} \norm[\infty]{f - A_{\varepsilon}(f)} & \le \varepsilon, \\
+\min\left\{\left\lceil  \left(\frac{(3-s)^{\frac{1-s}{2}}}{32(1-s)^{\frac{1-s}{2}}}\frac{\sigma\tau}{\varepsilon}\right)^{\frac{1}{1+s}}  \right\rceil-1, \left\lceil \frac{3\sqrt{3}\sigma}{16\varepsilon}\right\rceil-1 \right\} & \leq \comp(\varepsilon,\mathcal{N}_{s,\tau},\sigma)  \\
+\le \cost(A_{\varepsilon},\cn_{\tau},\sigma) & \le  \left\lceil \min\left( \frac{\sigma}{2\varepsilon(1 - \tau/n_{0}^{s})} , \left(\frac{\sigma\tau}{2\varepsilon(1 - \tau/n_{0}^{s})}\right)^{\frac{1}{1+s}}\right) \right\rceil.
+\end{align*}
 \end{theorem}
-\begin{proof}  For any nice function $f$ lying in $\cn_\tau$, its size is bounded above by $\hsigma_n(f)/(1-\tau/n)$ according to \eqref{sizebd}.  Furthermore, by the proof of Theorem \ref{stdappxthm} it follows that 
-\[
-\norm[\infty]{f - \tA_n(f)} \le \frac{\size(f)}{2n} \le \frac{\hsigma_n(f)}{2(n-\tau)}.
-\]
-Thus, when the stopping criterion in Step 2 is satisfied, the resulting approximation is within the desired tolerance.
+\begin{proof}
+For any nice function $f$ lying in $\mathcal{N}_{s,\tau},$ we can have
+$$\|f-A_{\varepsilon}(f)\|_{\infty}\leq \min\left\{ \frac{\hsigma_{n_{0}}(f)}{2n(1 - \tau/n_{0}^{s})} , \frac{\tau\hsigma_{n_{0}}(f)}{2n^{1+s}(1 - \tau/n_{0}^{s})} \right\}.$$
+Thus, when the stopping criterion in Step 2 is satisfied, the resulting approximation is within
+the desired tolerance.
 
-The algorithm terminates for the first positive integer $j$ satisfying the inequality in Step 2.  Since $\hsigma(f)$ never overestimates $\size(f)$ for all $f \in \ch$, this means that
+The algorithm terminates for the first positive integer $j$ satisfying the inequality in Step
+2. Since $\hat{\sigma}(f)$ never overestimates size$(f)$ for all $f \in H,$ this means that
 \begin{align*}
-n \ge \tau + \frac{\hsigma_n(f)}{2 \varepsilon} 
-& \Longleftarrow (\lceil \tau \rceil + 1 ) 2^{j-1} = n_1 2^{j-1} = n \ge \lceil \tau \rceil + \frac{\size(f)}{2 \varepsilon} \\
-& \Longleftarrow j \ge 2 +  \log_2\left(\frac{\lceil \tau \rceil + \frac{\size(f)}{2 \varepsilon}} {\lceil \tau \rceil + 1} \right) \\
-& \Longleftarrow n \ge 2 \lceil \tau \rceil + \max\left(2,\frac{\size(f)}{\varepsilon} \right).
+ & n \ge \left\lceil \min\left( \frac{\hsigma}{2\varepsilon(1 - \tau/n_{0}^{s})} , \left(\frac{\tau\hsigma}{2\varepsilon(1 - \tau/n_{0}^{s})}\right)^{\frac{1}{1+s}}\right) \right\rceil\\
+   \Rightarrow & n \ge  \left\lceil \min\left( \frac{\hsigma_{n_{0}}(f)}{2\varepsilon(1 - \tau/n_{0}^{s})} , \left(\frac{\tau\hsigma_{n_{0}}(f)}{2\varepsilon(1 - \tau/n_{0}^{s})}\right)^{\frac{1}{1+s}}\right) \right\rceil\\
+\Rightarrow &  \min\left\{ \frac{\hsigma_{n_{0}}(f)}{2n(1 - \tau/n_{0}^{s})} , \frac{\tau\hsigma_{n_{0}}(f)}{2n^{1+s}(1 - \tau/n_{0}^{s})} \right\}   \leq \varepsilon.
 \end{align*}
-This establishes an upper bound on the cost of the algorithm.
+This establishes an upper bound on the cost of the algorithm.\\
 
-The proof of the lower bound is similar to that in Theorem \ref{stdappxthm}. Consider \emph{any} (possibly adaptive) algorithm $A$ using $n\le \left \lceil \frac{\sigma}{2\varepsilon} \right \rceil - 1$ function evaluations. 
-A fooling function $f^* \in \cn_\tau$ is constructed to vanish at all data sites, $\xi_i$.  Unlike Theorem  \ref{stdappxthm}, the fooling function must be continuously differentiable.  The bump function in Theorem \ref{stdappxthm} is replaced by 
-\begin{equation} \label{contbump}
-\phi(x) : = [\max(0,1-x^2)]^2 = \begin{cases}(1-x^2)^2, & \abs{x} \le 1, \\
-0, & \abs{x} > 1,
-\end{cases}
-\end{equation}
-which has first and second derivatives
-\begin{equation} \label{contbump}
-\phi'(x) = \begin{cases} -4x(1-x^2), & \abs{x} \le 1, \\
-0, & \abs{x} > 1,
-\end{cases} \qquad 
-\phi''(x) = \begin{cases} -4(1-3x^2), & \abs{x} \le 1, \\
-0, & \abs{x} > 1,
-\end{cases}
-\end{equation}
-and note that $\norm[\infty]{\phi} = 1$, $\norm[\infty]{\phi'}=8/(3 \sqrt{3})$, and $\norm[\infty]{\phi''}=8$.  Given the algorithm $A$ with data sites $\xi_1, \ldots, \xi_n$, there exists at least one point $\xi_0 \in [0,1)$ with $\min_{1 \le i \le n} \abs{\xi_i -\xi_0} \ge 1/(2n)$.  Then define the fooling function by 
-\[
-f^*: x \mapsto \frac{\sigma}{2n}\psi(2n(x-\xi_0)).
-\]
-By definition, $\pm f^*(\xi_i)=0$ for $i=1, \ldots, n$, and $\norm[\infty]{\pm{f^*}'} = \sigma$, so $\pm f^* \in \cb_\sigma$.   Moreover, $\pm f^*(\xi_i)= \pm \sigma/(2n)$.  Since the two functions $\pm f^*$ provide the same data to algorithm $A$, it follows that $A(f)(\xi_0)=A(-f)(\xi_0)$.  The triangle inequality and the strict upper bound on $n$ then imply that the approximation error must be greater than the desired tolerance.
-\begin{align*}
-\sup_{f \in \cb} \norm[\infty]{f - A(f)} 
-&\ge \max\left(\norm[\infty]{f^* - A(f^*)},\norm[\infty]{-f^* - A(- f^*)}\right) \\ 
-& \ge \max\left(\abs{f^*(\xi_0) - A(f)(\xi_0)},\abs{-f^*(\xi_0) - A(-f^*)(\xi_0)}\right) \\
-& \ge \frac{1}{2} \left [ \abs{f(\xi_0) - A(f^*)(\xi_0)} + \abs{f^*(\xi_0)+ A(-f^*)(\xi_0)} \right ]\\
-& \ge \frac{1}{2} \abs{f^*(\xi_0) - A(f^*)(\xi_0) + f^*(\xi_0) + A(-f^*)(\xi_0)}\\
-& = \abs{f^*(\xi_0)} = \frac{\sigma}{2n} \ge \frac{\sigma}{2 \left(\left \lceil \frac{\sigma}{2\varepsilon} \right \rceil - 1\right)} > \varepsilon. 
+Next, we will prove the lower bound.
+
+Consider any (possibly
+adaptive) algorithm $A$ using $$n \leq \min\left\{\left\lceil  \left(\frac{(3-s)^{\frac{1-s}{2}}}{32(1-s)^{\frac{1-s}{2}}}\frac{\sigma\tau}{\varepsilon}\right)^{\frac{1}{1+s}} \right\rceil-2, \left\lceil \frac{3\sqrt{3}\sigma}{16\varepsilon}\right\rceil-2 \right\},$$
+function evaluations. We want to build a fooling function $f^{*} \in \mathcal{N}_{\tau}$
+is constructed to be linear at all data sites $\xi_{i}, \ i=1,\ldots,n.$ There exists at least one $i$ such that $\xi_{i+1}-\xi_{i}\ge\frac{1}{n+1}.$ Then define the fooling function by
+$$f_{\pm}^{*}(x):=\left\{\begin{matrix}
+Bx, & 0 \leq x \leq \xi_{j},\\
+Bx\pm A_{1}(x-\xi_{j})^{2}(x-\xi_{j+1})^{2} & \xi_{j}< x \leq \xi_{j+1},\\
+Bx & \xi_{j+1}< x \leq 1,
+\end{matrix}\right.$$
+where $A_{1},B$ are constants can by defined by $n,\sigma,\tau.$ And without loss of generality, we can assume $A_{1},B \ge 0.$
+Then if we let $\Phi(x)=(x+1)^2(x-1)^2, \text{ where } -1 \leq x \leq 1$
+we can have $\forall \xi_{j}< x \leq \xi_{j+1},$
+\begin{align*}f_{\pm}^{*}(x)&=Bx\pm  \frac{(\xi_{j+1}-\xi_{j})^{4}}{16}A_{1}\Phi\left[\frac{2x-(\xi_{j}+\xi_{j+1})}{\xi_{j+1}-\xi_{j}}\right], \\
+{f_{\pm}^{*}}^{'}(x)&=B \pm \frac{(\xi_{j+1}-\xi_{j})^{3}}{8}A_{1}\Phi^{'}\left[\frac{2x-(\xi_{j}+\xi_{j+1})}{\xi_{j+1}-\xi_{j}}\right]
 \end{align*}
-Thus, $\comp(\varepsilon,\cb_{\sigma},\Lambda^{\std}) > \left \lceil \frac{\sigma}{2\varepsilon} \right \rceil -1$, which completes the proof.
+Thus, if we let $\tilde{x}=\frac{2x-(\xi_{j}+\xi_{j+1})}{\xi_{j+1}-\xi_{j}}, \tilde{t}=\frac{2t-(\xi_{j}+\xi_{j+1})}{\xi_{j+1}-\xi_{j}} $ we have
+$$\frac{|f_{+}^{*'}(x)-f_{+}^{*'}(t)|}{|x-t|^{s}}=\left(\frac{\xi_{j+1}-\xi_{j}}{x}\right)^{3-s}A_{1}\frac{|\Phi_{+}^{*'}(\tilde{x})-\Phi_{+}^{*'}(\tilde{t})|}
+{|\tilde{x}-\tilde{t}|^{s}}.$$
+And we know
+$$\frac{|\Phi_{+}^{*'}(\tilde{x})-\Phi_{+}^{*'}(\tilde{t})|}
+{|\tilde{x}-\tilde{t}|^{s}}=4|\tilde{x}-\tilde{t}|^{1-s}\left|1-\frac{3}{4}(\tilde{x}+\tilde{t})^{2}-\frac{1}{4}(\tilde{x}-\tilde{t})^{2}\right|
+\Rightarrow \max \frac{|\Phi_{+}^{*'}(\tilde{x})-\Phi_{+}^{*'}(\tilde{t})|}
+{|\tilde{x}-\tilde{t}|^{s}}=2^{4-s}\frac{(1-s)^{\frac{1-s}{2}}}{(3-s)^{\frac{3-s}{2}}},$$
+where $(1-s)^{\frac{1-s}{2}}=1,$ when $s=1.$
+
+Hence, we have
+\begin{align*}\|f_{+}^{*'}\|_{\infty}&=B+\frac{\sqrt{3}A_{1}}{9}(\xi_{j+1}-\xi_{j})^{3}, \\ \max_{x,t}\frac{|f_{+}^{*'}(x)-f_{+}^{*'}(t)|}{|x-t|^{s}}&=2A_{1}(\xi_{j+1}-\xi_{j})^{3-s}\frac{(1-s)^{\frac{1-s}{2}}}{(3-s)^{\frac{3-s}{2}}}.
+\end{align*}
+
+Let $B$ satisfy $ B+\frac{\sqrt{3}A_{1}}{9}(\xi_{j+1}-\xi_{j})^{3}=\sigma.$
+Then we have $$\sigma-\frac{\sqrt{3}A_{1}}{9}(\xi_{j+1}-\xi_{j})^{3} >0 \Rightarrow A_{1} < \frac{3\sqrt{3}\sigma}{(\xi_{j+1}-\xi_{j})^{3}}.$$
+Thus we know
+$$\frac{\max_{x,t}\frac{|f_{+}^{*'}(x)-f_{+}^{*'}(t)|}{|x-t|^{s}}}{ \|f_{+}^{*'} \|_{\infty}}=\frac{2A_{1}(\xi_{j+1}-\xi_{j})^{3-s}\frac{(1-s)^{\frac{1-s}{2}}}{(3-s)^{\frac{3-s}{2}}} }{\sigma}
+ \leq \tau \Rightarrow A_{1} \leq\frac{(3-s)^{\frac{3-s}{2}}\sigma\tau}{2(\xi_{j+1}-\xi_{j})^{3-s}(1-s)^{\frac{1-s}{2}}} .$$
+Hence we have $$A_{1}=\min\left\{\frac{3\sqrt{3}\sigma}{(\xi_{j+1}-\xi_{j})^{3}},\frac{(3-s)^{\frac{3-s}{2}}\sigma\tau}{2(\xi_{j+1}-\xi_{j})^{3-s}(1-s)^{\frac{1-s}{2}}} \right\}$$
+Then we have $f_{+}^{*} \in \mathcal{N}_{\tau}$ and meanwhile $f_{+}^{*} \in \mathcal{B}_{\sigma}.$\\
+We can also know that $f_{-}^{*} \in \mathcal{N}_{\tau}$ and $f_{-}^{*} \in \mathcal{B}_{\sigma}.$
+
+We denote $\xi_{0}=\frac{1}{2}(\xi_{j}+\xi_{j+1}).$
+Since the two functions $f_{\pm}^{*}$ provide the same data to Algorithm $A,$ it follows
+that $A(f_{+}^{*})(\xi_{0})=A(f_{-}^{*})(\xi_{0}).$
+The triangle inequality and the strict upper bound on
+$n$, we will have the approximation error must be greater than the desired tolerance.
+\begin{align*}
+\sup\limits_{f \in \mathcal{B}}\|f-A(f)\|_{\infty} & \ge \max\left(\|f_{+}^{*}-A(f_{+}^{*})\|_{\infty},\|f_{-}^{*}-A(f_{-}^{*})\|_{\infty}\right) \\
+& \ge \max\left(|f_{+}^{*}(\xi_{0})-A(f_{+}^{*})(\xi_{0})|,|f_{-}^{*}(\xi_{0})-A(f_{-}^{*})(\xi_{0})|\right) \\
+& \ge \frac{1}{2}\left(|f_{+}^{*}(\xi_{0})-A(f_{+}^{*})(\xi_{0})|+|f_{-}^{*}(\xi_{0})-A(f_{-}^{*})(\xi_{0})|\right)\\
+& \ge \frac{1}{2}\left(|f_{+}^{*}(\xi_{0})-A(f_{+}^{*})(\xi_{0})-\left(f_{-}^{*}(\xi_{0})-A(f_{-}^{*})(\xi_{0})\right)|\right)\\
+& \ge A_{1}\left(\frac{\xi_{j+1}-\xi_{j}}{2}\right)^{4}=\min\left\{\frac{3\sqrt{3}\sigma}{    6}(\xi_{j+1}-\xi_{j}),\frac{(3-s)^{\frac{3-s}{2}}\sigma\tau}{32(1-s)^{\frac{1-s}{2}}}(\xi_{j+1}-\xi_{j})^{1+s} \right\} \\& \ge \min\left\{\frac{3\sqrt{3}\sigma}{16(n+1)},\frac{(3-s)^{\frac{3-s}{2}}\sigma\tau}{32(1-s)^{\frac{1-s}{2}}(n+1)^{1+s} } \right\}  > \varepsilon.
+\end{align*}
+  Hence, we can have the lower bound$$n \ge \max\left\{\left\lceil \left(\frac{(3-s)^{\frac{1-s}{2}}}{32(1-s)^{\frac{1-s}{2}}}\frac{\sigma\tau}{\varepsilon}\right)^{\frac{1}{1+s}} \right\rceil-1, \left\lceil \frac{3\sqrt{3}\sigma}{16\varepsilon}\right\rceil-1 \right\}.$$
 \end{proof}
